--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
     <title>Testbed Parent</title>
 </head>
 <body>
+    <section>
+        <content>
+            Session ID: 
+        </content>
+    </section>
+
     <script>
         gtag('get', 'G-MCSWPYYBJE', 'session_id', (id) => { console.log(id); } );
     </script>
