--- a/index.html
+++ b/index.html
@@ -25,13 +25,18 @@
 </head>
 <body>
     <section>
-        <content>
+        <content id="sesid">
             Session ID: 
         </content>
     </section>
 
     <script>
-        gtag('get', 'G-MCSWPYYBJE', 'session_id', (id) => { console.log(id); } );
+        var ses_msg = document.getElementById("sesid");
+        
+        dataLayer.push('get', 'G-MCSWPYYBJE', 'session_id', (id) => { 
+            ses_msg.innerHTML = "Session ID: "+id;
+            console.log(id); 
+        } );
     </script>
 
     <script src="index.js" />
