--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <title>Testbed Parent</title>
 </head>
 <body>
+    <script src="index.js"></script>
+
     <section>
-        <content id="sesid">
-            Session ID: 
-        </content>
+        <content id="sesid"> </content>
     </section>
 
     <script>
@@ -38,7 +38,6 @@
         console.log(ses_id); 
     </script>
 
-    <script src="index.js" />
 
     <!-- Google Tag Manager (noscript) -->
     <noscript>
